change messageQueue, to take Object; method writeOutput(Object)